# flypipe

./: .coverage  .coverage-core  .coverage-pyspark  .coverage-snowpark  .gitattributes  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  changelog.md  changelog.txt  docker-compose.yaml  mkdocs.yml  pyproject.toml  requirements-dev-pyspark.in  requirements-dev-pyspark.txt  requirements-dev-snowpark.in  requirements-dev-snowpark.txt  requirements-dev.in  requirements-dev.txt  requirements-pkg.in  requirements-pkg.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  setup222.cfg222  test.py  versions.json
.docker/: Dockerfile  README.md  docker-compose.yaml  start.py
.docker/core/: Dockerfile  docker-compose.yaml
.docker/hive/: Dockerfile
.docker/snowflake/: Dockerfile  docker-compose.yaml
.docker/spark/: Dockerfile  docker-compose.yaml
.github/hooks/: prepare-commit-msg
.github/workflows/: build-docs.yml  build-wheel.yml  cd-production.yml  cd-staging.yml  ci.yml  deploy-docs-pypi.yml  deploy-docs.yml  deploy-pypi.yml  deploy.yml  documentation.yml  main.yml  predeploy.yml  prepare-artifacts.yml  prepare-deployment.yml  verification.yml
4.3/: 404.html  index.html
4.3/cache-flow/: index.html
4.3/changelog/: index.html
4.3/configuration/: index.html
4.3/data-sources/: index.html
4.3/graph-catalog-ui/: index.html
4.3/license/: index.html
4.3/node/: index.html
4.3/node-function/: index.html
4.3/preprocessing-flow/: index.html
4.3/questions-suggestions/: index.html
4.3/relationships/: index.html
4.3/search/: search_index.json
4.3/stylesheets/: extra.css
5.0/: objects.inv
5.0/changelog/: index.html
5.0/data-sources/: index.html
5.0/license/: index.html
5.0/node/: index.html
5.0/preprocessing-flow/: index.html
5.0/questions-suggestions/: index.html
5.0/relationships/: index.html
5.0/search/: search_index.json
6.0/cache-flow/: index.html
6.0/changelog/: index.html
6.0/configuration/: index.html
6.0/graph-catalog-ui/: index.html
6.0/node/: index.html
6.0/node-function/: index.html
6.0/relationships/: index.html
6.0/search/: search_index.json
6.1/: 404.html  index.html
6.1/changelog/: index.html
6.1/node/: index.html
6.1/node-function/: index.html
6.1/search/: search_index.json
docs/: build_docs.py  build_docs.sh  build_docs_dev.sh  cache-flow.md  changelog.md  configuration.md  data-sources.md  docs_build.sh  generate_index_html.py  git.py  graph-catalog-ui.md  index.html  index.md  license.md  node-function.md  node.md  preprocessing-flow.md  questions-suggestions.md  relationships.md
docs/notebooks/: clean.py
docs/source/: concept.md  concept.rst  conf.py  configuration.rst  contribute.rst  data_sources.rst  databricks_dlt.rst  ddp.rst  how-to-guides.rst  index.rst  installation.rst  license.rst  node.rst  node_function.rst  organise_your_project.rst  project.rst  quick-start.rst  readme.rst  streaming.rst  tutorials.rst
docs/stylesheets/: extra.css
docs2/: build_docs.py  generate_index_html.py  index.html
docs2/source/: concept.md  conf.py  index.rst
examples/: casting.py  pandas_example.py  pipeline.py  pipeline2.py  pipeline_different_types.py  spark_sql.py  types.py
flypipe/: __init__.py  cache.py  cache_context.py  cache_context_test.py  cache_test.py  catalog.py  catalog_test.py  config.py  config_core_test.py  config_test.py  conftest.py  dataframe_wrapper.py  exceptions.py  graph_html.py  input_nodes.py  lab.py  lab2.py  mode.py  node.py  node_cdc_test.py  node_core_test.py  node_dependencies_mixin.py  node_function.py  node_function_core_test.py  node_function_test.py  node_generator.py  node_graph.py  node_graph_core_test.py  node_graph_test.py  node_input.py  node_input_test.py  node_pyspark_test.py  node_result.py  node_run_context.py  node_run_data.py  node_run_data_test.py  node_snowpark_test.py  node_test.py  node_type.py  output_column_set.py  (+24 more)
flypipe/cache/: __init__.py  cache.py  cache_context.py  cache_context_core_test.py  cache_context_pyspark_test.py  cache_context_snowpark_test.py  cache_context_test.py  cache_core_test.py  cache_mode.py  cache_test.py  (+10 more)
flypipe_dev/: .env.sample  requirements.txt  spark.py
frontend/: .babelrc  .prettierignore  README.md  package-lock.json  package.json  webpack.config.js
local/: .env.sample  Dockerfile  docker-compose.yaml  requirements.txt  start.py
notebooks/: Untitled.ipynb
scripts/: calculate_version.py  calculate_version_test.py  generate_changelog.py  generate_changelog_test.py  pylint.py  set_version.py  utils.py  utils_test.py
(+426 files in other folders)
