[build-system]
requires = ["flit_core >=3.2,<4", "networkx >=3.1,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flypipe"
authors = [
    {name = "Jose Helio de Brum Muller", email = "josemuller.flypipe@gmail.com"},
    {name = "Chris Marwick", email = "chrismarwick.flypipe@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "description"]
requires-python=">=3.8"
dependencies  = [
    "Jinja2 >=3.1",
    "networkx >=3.1",
    "tabulate >=0.9",
    "sparkleframe >=0.2"
]

[project.urls]
Home = "https://github.com/flypipe/flypipe.git"

[tool.flit.sdist]
include = ["flypipe/js"]