[build-system]
requires = ["flit_core >=3.2,<4", "networkx >=3.1,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flypipe"
authors = [
    {name = "Jose Helio de Brum Muller", email = "josemuller.flypipe@gmail.com"},
    {name = "Chris Marwick", email = "chrismarwick.flypipe@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "description"]
requires-python=">=3.8"
dependencies  = [
    "Jinja2 >=3.1",
    "networkx >=3.1",
    "tabulate >=0.9",
    "sparkleframe >=0.2"
]

[project.urls]
Home = "https://github.com/flypipe/flypipe.git"

[project.optional-dependencies]
# Spark support with Delta Lake and Pandas-on-Spark
spark = [
    "pyspark[pandas-on-spark,sql] >=3.5.0",
    "delta-spark >=3.0.0",
]

# Snowflake support with local testing
snowflake = [
    "snowflake-snowpark-python[localtest] >=1.44.0",
    "snowflake-connector-python >=4.0.0",
]

# All backends (Spark + Snowflake)
all = [
    "pyspark[pandas-on-spark,sql] >=3.5.0",
    "delta-spark >=3.0.0",
    "snowflake-snowpark-python[localtest] >=1.44.0",
    "snowflake-connector-python >=4.0.0",
]

# Development dependencies (for contributors)
dev = [
    "pytest >=8.0.0",
    "pytest-cov >=6.0.0",
    "pytest-mock >=3.14.0",
    "pytest-xdist >=3.6.0",
    "black >=24.0.0",
    "ruff >=0.9.0",
    "chispa >=0.11.0",
]

[tool.flit.sdist]
include = ["flypipe/js"]