[metadata]
name = flypipe
license = apache-2.0
description = 'Data and Feature store transformations manager'
long_description = file: README.md
author = Jose Helio de Brum Muller
author_email = josemuller.flypipe@gmail.com
url = https://github.com/flypipe/flypipe.git
keywords = 'feature', 'pipeline', 'data', 'ml', 'ds', 'machine learning', 'data science', 'data engineering'
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Development Status :: 1 - Planning
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
package_dir=
    =flypipe
install_requires=
  networkx
  pyarrow
  matplotlib

[options.extras_require]
all = pyspark[sql,pandas_on_spark]
pyspark = pyspark[sql,pandas_on_spark]